[gd_scene load_steps=10 format=3 uid="uid://b1tvo8c6klabx"]

[ext_resource type="Script" path="res://canvas_layer.gd" id="1_o71cd"]
[ext_resource type="Texture2D" uid="uid://w5sm7ry22mak" path="res://assets/HomeButton.png" id="2_2awir"]
[ext_resource type="Texture2D" uid="uid://bgkltorsc0h2h" path="res://assets/Replay.png" id="3_knoqs"]
[ext_resource type="Texture2D" uid="uid://cj36c313nfyk8" path="res://assets/Banner.png" id="3_tj5qt"]
[ext_resource type="FontFile" uid="uid://cwd1tkm36irny" path="res://assets/pixel_font.ttf" id="5_1glo8"]
[ext_resource type="Texture2D" uid="uid://dlklrxnctn0fx" path="res://assets/Exit.png" id="6_4yar2"]
[ext_resource type="Texture2D" uid="uid://bagnc3sg7kppn" path="res://assets/TitleScreen.png" id="6_8bjin"]
[ext_resource type="Texture2D" uid="uid://c6qcntmekwba4" path="res://assets/PlayButton.png" id="6_xhuva"]
[ext_resource type="AudioStream" uid="uid://b16oij4uckeyd" path="res://assets/LoseSoundDistorted.mp3" id="7_juq5x"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_o71cd")

[node name="endScreen" type="Node2D" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="endScreen"]
position = Vector2(838.746, 456.5)
scale = Vector2(0.723729, 1.155)
texture = ExtResource("2_2awir")

[node name="HomeScreenButton" type="Button" parent="endScreen"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 753.746
offset_top = 437.5
offset_right = 931.746
offset_bottom = 556.5

[node name="Sprite2D2" type="Sprite2D" parent="endScreen"]
position = Vector2(569, 115)
scale = Vector2(1.355, 1.36333)
texture = ExtResource("3_tj5qt")

[node name="EndGameScoreDisplay" type="Node2D" parent="endScreen"]

[node name="PlayerWonDisplay" type="Label" parent="endScreen/EndGameScoreDisplay"]
offset_left = 432.0
offset_top = 107.0
offset_right = 954.0
offset_bottom = 179.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_1glo8")
theme_override_font_sizes/font_size = 20
text = "PLAYER 1 LOST 
LOOP AGAIN LATER!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="endScreen"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 265.0
offset_top = 429.0
offset_right = 433.0
offset_bottom = 569.0

[node name="Sprite2D" type="Sprite2D" parent="endScreen/RestartButton"]
position = Vector2(83, 67)
scale = Vector2(0.515, 0.705)
texture = ExtResource("3_knoqs")

[node name="beforeScreen" type="Node2D" parent="."]

[node name="TitleScreen" type="Sprite2D" parent="beforeScreen"]
position = Vector2(575, 307)
scale = Vector2(1.1555, 0.93325)
texture = ExtResource("6_8bjin")

[node name="playButton" type="Button" parent="beforeScreen"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 496.0
offset_top = 382.0
offset_right = 667.0
offset_bottom = 487.0

[node name="Sprite2D" type="Sprite2D" parent="beforeScreen/playButton"]
position = Vector2(83, 49)
scale = Vector2(0.545, 0.63)
texture = ExtResource("6_xhuva")

[node name="quitGameButton" type="Button" parent="beforeScreen"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 496.0
offset_top = 519.0
offset_right = 669.0
offset_bottom = 621.0

[node name="Sprite2D" type="Sprite2D" parent="beforeScreen/quitGameButton"]
position = Vector2(84, 50)
scale = Vector2(0.575313, 0.6325)
texture = ExtResource("6_4yar2")

[node name="LoopingLoseSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_juq5x")
volume_db = 1.5

[connection signal="mouse_entered" from="endScreen/HomeScreenButton" to="." method="_on_home_screen_button_mouse_entered"]
[connection signal="mouse_exited" from="endScreen/HomeScreenButton" to="." method="_on_home_screen_button_mouse_exited"]
[connection signal="pressed" from="endScreen/HomeScreenButton" to="." method="_on_home_button_pressed"]
[connection signal="mouse_entered" from="endScreen/RestartButton" to="." method="_on_restart_button_mouse_entered"]
[connection signal="mouse_exited" from="endScreen/RestartButton" to="." method="_on_restart_button_mouse_exited"]
[connection signal="pressed" from="endScreen/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="mouse_entered" from="beforeScreen/playButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="beforeScreen/playButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="beforeScreen/playButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="beforeScreen/quitGameButton" to="." method="_on_quit_game_button_mouse_entered"]
[connection signal="mouse_exited" from="beforeScreen/quitGameButton" to="." method="_on_quit_game_button_mouse_exited"]
[connection signal="pressed" from="beforeScreen/quitGameButton" to="." method="_on_quit_game_button_pressed"]
